--- a/poem.rmd
+++ b/poem.rmd
@@ -30,6 +30,32 @@ Like a tea tray in the sky
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
+Some say the world will end in fire,
+
+
+Some say in ice.
+
+
+From what I’ve tasted of desire
+
+
+I hold with those who favor fire.
+
+
+But if it had to perish twice,
+
+
+I think I know enough of hate
+
+
+To say that for destruction ice
+
+
+Is also great
+
+
+And would suffice.
+
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
