--- a/poem.rmd
+++ b/poem.rmd
@@ -27,6 +27,9 @@ Up above the world you fly,
 
 Like a tea tray in the sky
 
+
+There is no fifth line. 
+
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
@@ -45,19 +48,25 @@ I hold with those who favor fire.
 But if it had to perish twice,
 
 
-I think I know enough of hate
-
-
-To say that for destruction ice
-
-
-Is also great
-
-
-And would suffice.
-
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
+
+"The sun was shining on the sea,
+
+
+      Shining with all his might:
+      
+      
+He did his very best to make
+
+
+      The billows smooth and bright —
+      
+      
+And this was odd, because it was
+
+
+      The middle of the night.
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
